examples/neg/parsing/try-no-body.effekt
def main() = {
  try with emit[Int] {}
}